--- a/index.html
+++ b/index.html
@@ -8,15 +8,30 @@
 </head>
 
 <body>
-    <div class = "header">
-        <div class="logo">Header Logo</div>
-        <ul class = "right-links">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
+    <div class="hero">
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <ul class = "right-links">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+        <div class="welcome-section">
+            <ul class="signup">
+                <li class="hero-main">This website is awesome</li>
+                <li>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</li>
+                <li><button>Sign Up</button></li>
+            </ul>
+            <div class="placeholder">
+                this is a placeholder for an image
+            </div>
+        </div>
     </div>
-    <div class = "content"></div>
+    <div class = "content">
+        
+        
+    </div>
     <div class = "footer"></div>
 </body>
 
