--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -29,10 +31,23 @@
         </div>
     </div>
     <div class = "content">
-        
-        
+        <div class="info">
+            <div class="info-text">Some random information.</div>
+            <ul class="info-cards">
+                <li><div class="card">a</div><div class="card-text">this is some subtext under an illustration or an image</div></li>
+                <li><div class="card">a</div><div class="card-text">this is some subtext under an illustration or an image</div></li>
+                <li><div class="card">a</div><div class="card-text">this is some subtext under an illustration or an image</div></li>
+                <li><div class="card">a</div><div class="card-text">this is some subtext under an illustration or an image</div></li>
+            </ul>
+        </div>
+        <div class="quote">
+            <div class="quote-text">"This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."</div>
+            <div class="quote-author">- Thor, God of Thunder</div>
+        </div>
     </div>
-    <div class = "footer"></div>
+    <div class = "footer">
+        Copyright © The Odin Project 2022
+    </div>
 </body>
 
 </html>
