completed action section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
             <div class="quote-text">"This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."</div>
             <div class="quote-author">- Thor, God of Thunder</div>
         </div>
+        <div class="action">
+            <div class="action-box">
+                <div class="action-box-left">
+                    <div class="action-title">Call to action! It's time!</div>
+                    <div class="action-text">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="action-button">Sign up</button>
+            </div>
+        </div>
     </div>
     <div class = "footer">
         Copyright © The Odin Project 2022
